k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhespi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myhespi
  template:
    metadata:
      labels:
        app: myhespi
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: myhespi
          image: ghcr.io/biodiversity-cz/myhespi:main
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "500m"
              memory: "4Gi"
            limits:
              cpu: "4"
              memory: "32Gi"
          volumeMounts:
            - name: temp-data
              mountPath: /app/myhespi-temp
      volumes:
        - name: temp-data
          emptyDir: {}
