k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myhespi-svc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: myhespi
