k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myhespi-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.org/client-max-body-size: "100m"
    nginx.ingress.kubernetes.io/custom-http-errors: "599"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "hespi.biodiversity.cz"
      secretName: hespi-biodiversity-cz-tls
    - hosts:
        - "myhespi.dyn.cloud.e-infra.cz"
      secretName: myhespi-dyn-cloud-e-infra-cz-tls
  rules:
    - host: "hespi.biodiversity.cz"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: myhespi-svc
                port:
                  number: 80
    - host: "myhespi.dyn.cloud.e-infra.cz"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: myhespi-svc
                port:
                  number: 80
